# api/internal/domain/actor.go
@@ -13,12 +13,12 @@ type Actor struct {
 	Birthday    time.Time      `json:"birthday"`
 	Sex         string         `json:"sex"`
 	Information sql.NullString `json:"information"`
-}
+} // @name Actor
 
 type ActorFilm struct {
 	Actor Actor  `db:"actors"`
 	Films []Film `db:"films"`
-}
+} // @name ActorFilm
 
 func (a *Actor) IsValid() bool {
 	return a.ID >= 0 && a.Name != "" && a.Surname != "" && a.Sex != "" && !a.Birthday.IsZero()
